# wordpuzzle

./: README.md
wordpuzzle/: pyproject.toml  readme.md
wordpuzzle/api/: admin.py  middleware.py  models.py  urls.py  views.py  word_loader.py
wordpuzzle/api/migrations/: 0001_initial.py
wordpuzzle/api/tests/: test_middleware.py  test_models.py  test_views.py
wordpuzzle/wordpuzzle/: settings.py
