[tool.poetry]
name = "tech-test-python"
version = "0.1.0"
description = "API for wordpuzzle project"
authors = ["Anurag Verma <anuragverma65@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0.1"
drf-yasg = "^1.21.7"
ruff = "^0.1.14"
coverage = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
